			   XPCE ChangeLog
			   ==============

* ENHANCED: some issues in table-layout.

VERSION 6.6.30, distributed with SWI-Prolog 5.6.30
==================================================

* FIXED: Bug#265: socket(tuple(host, 0).  Sebastian Steenbuck.

* PORT: Prefer pkg-config over xft-config for finding XFT.  Needed on
  Redhat Linux FC6.  With help from Jacco van Ossenbruggen.

VERSION 6.6.29, distributed with SWI-Prolog 5.6.29
==================================================

* FIXED: PceEmacs: variable-marking inside brace-terms.

VERSION 6.6.27, distributed with SWI-Prolog 5.6.27
==================================================

* PORT: More patches for the Win64 port.

VERSION 6.6.26, distributed with SWI-Prolog 5.6.26
==================================================

* PORT: Many changes for Win64 port (running experimentally).

* FIXED: Store/load real objects to/from file for 64-bit platforms.  Various
  other issues with real objects on 64-bit systems.

VERSION 6.6.25, distributed with SWI-Prolog 5.6.25
==================================================

* MODIFIED: Moved library(broadcast) to general SWI-Prolog library.  Should
  not affect code that load this library on demand or using the recommended
  :- use_module(liberary(broadcast)).

VERSION 6.6.24, distributed with SWI-Prolog 5.6.24
==================================================

* FIXED: Bug in srcsink<-contents, showing up after 64-bit fix below.

* FIXED: 64-bit issue in XPCE stream class (also affecting socket and
  process).

VERSION 6.6.23, distributed with SWI-Prolog 5.6.23
==================================================

* PORT: Include LDFLAGS making xpce-client.

* FIXED: Class textbuffer: crash in Windows on <-scan.  Jacco van Ossenbruggen.

* FIXED: PceEmacs: Avoid loading DDE interface on Unix.

VERSION 6.6.21, distributed with SWI-Prolog 5.6.21
==================================================

* PORT: Bug#214: Compatibility to new FreeType #include standards.