@@ -1,6 +1,8 @@
 			   XPCE ChangeLog
 			   ==============
 
+* ADDED: Edit breakpoints and define how they are handled in the debugger.
+
 * ENHANCED: some issues in table-layout.
 
 VERSION 6.6.30, distributed with SWI-Prolog 5.6.30
